--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1,8 +1,9 @@
-
 .hero-section {
   position: relative;
   height: 80vh;
-  background: url('https://images.unsplash.com/photo-1504754524776-8f4f37790ca0') center/cover no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .overlay {
@@ -11,7 +12,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
 }
 
 .hero-content {
